--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/moraispgsi/action-dispatcher#readme",
   "dependencies": {
     "babel": "^6.23.0",
+    "body-parser": "^1.17.2",
     "express": "^4.15.3"
   }
 }
