--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "babel": "^6.23.0",
     "body-parser": "^1.17.2",
+    "co": "^4.6.0",
     "express": "^4.15.3",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   },
   "devDependencies": {
     "debug": "^2.6.8"
