--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "co": "^4.6.0",
     "express": "^4.15.3",
     "request": "^2.81.0",
-    "request-promise": "^4.2.1"
+    "request-promise": "^4.2.1",
+    "webflow-api": "^0.4.1"
   },
   "devDependencies": {
     "debug": "^2.6.8"
