--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.17.2",
     "co": "^4.6.0",
     "express": "^4.15.3",
+    "oauth2-server": "^2.4.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "webflow-api": "^0.4.1"
