--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 jobs:
   include:
     - stage: unit tests
-      script: ""
-    - stage: unit tests
-      script: ""
+      script: "npm test"
     - stage: deploy to staging
       script: skip
       deploy: &heroku
