--- a/package.json
+++ b/package.json
@@ -1,33 +1,76 @@
 {
-  "name": "action-dispatcher",
-  "version": "0.0.1",
-  "description": "",
+  "name": "node-express-sequelize-es2015",
+  "version": "1.0.0",
+  "description": "API server boilerplate using Node/Express/Sequelize",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run apidoc && npm run clusters",
+    "clusters": "babel-node clusters.js",
+    "dev": "better-npm-run dev",
+    "lint": "eslint .",
+    "lint:fix": "npm run lint -- --fix",
+    "test": "NODE_ENV=test mocha test/**/*.js",
+    "apidoc": "apidoc -i routes/ -o public/apidoc",
+    "deploy": "better-npm-run deploy"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://moraispgsi@github.com/moraispgsi/action-dispatcher.git"
+  "apidoc": {
+    "name": "Node Task API - Documentation",
+    "template": {
+      "forceLanguage": "en"
+    }
   },
-  "author": "Ricardo Morais",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/moraispgsi/action-dispatcher/issues"
+  "betterScripts": {
+    "dev": {
+      "command": "nodemon --exec babel-node index.js --ignore repository/",
+      "env": {
+        "NODE_ENV": "development",
+        "DEBUG": "app:*"
+      }
+    },
+    "deploy": {
+      "command": "echo TODO",
+      "env": {
+        "NODE_ENV": "production",
+        "DEBUG": "app:*"
+      }
+    }
   },
-  "homepage": "https://github.com/moraispgsi/action-dispatcher#readme",
+  "author": "Arnaud Valensi",
   "dependencies": {
-    "babel": "^6.23.0",
-    "body-parser": "^1.17.2",
-    "co": "^4.6.0",
-    "express": "^4.15.3",
-    "oauth2-server": "^2.4.1",
-    "request": "^2.81.0",
+    "bcrypt": "^1.0.2",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.0",
+    "compression": "^1.6.1",
+    "consign": "^0.1.2",
+    "cors": "^2.7.1",
+    "debug": "^2.6.8",
+    "express": "^4.13.4",
+    "fsm-engine": "0.0.17",
+    "helmet": "^1.1.0",
+    "jwt-simple": "^0.4.1",
+    "morgan": "^1.6.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.0.0",
     "request-promise": "^4.2.1",
-    "webflow-api": "^0.4.1"
+    "sequelize": "^3.19.2",
+    "sqlite3": "^3.1.8",
+    "winston": "^2.1.1"
   },
   "devDependencies": {
-    "debug": "^2.6.8"
+    "apidoc": "^0.15.1",
+    "babel-cli": "^6.5.1",
+    "babel-eslint": "^5.0.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.5.2",
+    "better-npm-run": "0.0.5",
+    "chai": "^3.5.0",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^5.0.1",
+    "eslint-plugin-flow-vars": "^0.1.3",
+    "mocha": "^2.4.5",
+    "nodemon": "^1.8.1",
+    "sqlite": "^2.8.0",
+    "supertest": "^1.2.0"
   }
 }
