--- a/package.json
+++ b/package.json
@@ -54,9 +54,7 @@
     "request-promise": "^4.2.1",
     "sequelize": "^3.19.2",
     "sqlite3": "^3.1.8",
-    "winston": "^2.1.1",
-    "mocha": "^2.4.5",
-    "chai": "^3.5.0"
+    "winston": "^2.1.1"
   },
   "devDependencies": {
     "apidoc": "^0.15.1",
