--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "passport-jwt": "^2.0.0",
     "request-promise": "^4.2.1",
     "sequelize": "^3.19.2",
-
-    "winston": "^2.1.1"
+    "winston": "^2.1.1",
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "apidoc": "^0.15.1",
@@ -70,6 +70,7 @@
     "eslint-plugin-flow-vars": "^0.1.3",
     "mocha": "^2.4.5",
     "nodemon": "^1.8.1",
+    "sqlite3": "^3.1.8",
     "supertest": "^1.2.0"
   }
 }
