--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:fix": "npm run lint -- --fix",
     "test": "NODE_ENV=test mocha test/**/*.js",
     "apidoc": "apidoc -i routes/ -o public/apidoc",
-    "deploy": "better-npm-run deploy"
+    "deploy": "better-npm-run deploy",
+    "ns": "node genns.js"
   },
   "apidoc": {
     "name": "Node Task API - Documentation",
@@ -65,6 +66,7 @@
     "babel-register": "^6.5.2",
     "better-npm-run": "0.0.5",
     "chai": "^3.5.0",
+    "ejs": "^2.5.6",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^5.0.1",
     "eslint-plugin-flow-vars": "^0.1.3",
