--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
   "description": "API server boilerplate using Node/Express/Sequelize",
   "main": "index.js",
   "scripts": {
-    "start": "npm run apidoc && npm run clusters",
-    "clusters": "babel-node clusters.js",
+    "start": "better-npm-run start",
     "dev": "better-npm-run dev",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
-    "test": "NODE_ENV=test mocha test/**/*.js",
+    "test": "better-npm-run test",
     "apidoc": "apidoc -i routes/ -o public/apidoc",
     "deploy": "better-npm-run deploy",
     "ns": "node genns.js"
   },
   "apidoc": {
-    "name": "Node Task API - Documentation",
+    "name": "Action dispatcher API - Documentation",
     "template": {
       "forceLanguage": "en"
     }
@@ -25,37 +24,65 @@
       "command": "nodemon --exec babel-node index.js --ignore repository/",
       "env": {
         "NODE_ENV": "development",
-        "DEBUG": "app:*"
+        "DEBUG": "engine core instance-log vantage instance"
       }
     },
     "deploy": {
-      "command": "echo TODO",
+      "command": "babel -d ./build ./index.js -s & babel -d ./build ./auth.js & babel -d ./build ./db.js & babel ./libs --out-dir ./build/libs & babel ./routes --out-dir ./build/routes & babel ./models --out-dir ./build/models",
+      "env": {
+        "NODE_ENV": "production"
+      }
+    },
+    "start": {
+      "command": "node build/index.js",
       "env": {
         "NODE_ENV": "production",
-        "DEBUG": "app:*"
+        "DEBUG": "engine core instance-log vantage instance"
+      }
+    },
+    "test": {
+      "command": "mocha test/**/*.js",
+      "env": {
+        "NODE_ENV": "test"
       }
     }
   },
   "author": "Arnaud Valensi",
   "dependencies": {
+    "apidoc": "^0.15.1",
+    "babel-cli": "^6.5.1",
+    "babel-eslint": "^5.0.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.5.2",
     "bcrypt": "^1.0.2",
     "bcrypt-nodejs": "0.0.3",
+    "better-npm-run": "0.0.5",
     "body-parser": "^1.15.0",
+    "chai": "^3.5.0",
     "compression": "^1.6.1",
     "consign": "^0.1.2",
     "cors": "^2.7.1",
     "debug": "^2.6.8",
+    "ejs": "^2.5.6",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^5.0.1",
+    "eslint-plugin-flow-vars": "^0.1.3",
     "express": "^4.13.4",
     "fsm-engine": "0.0.17",
     "helmet": "^1.1.0",
     "jwt-simple": "^0.4.1",
+    "mocha": "^2.4.5",
     "morgan": "^1.6.1",
+    "nodemon": "^1.8.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
     "request-promise": "^4.2.1",
     "sequelize": "^3.19.2",
-    "winston": "^2.1.1",
-    "sqlite3": "^3.1.8"
+    "sqlite3": "^3.1.8",
+    "supertest": "^1.2.0",
+    "tedious": "^2.0.0",
+    "winston": "^2.1.1"
   },
   "devDependencies": {
     "apidoc": "^0.15.1",
