--- a/package.json
+++ b/package.json
@@ -50,13 +50,6 @@
   "author": "Arnaud Valensi",
   "dependencies": {
     "apidoc": "^0.15.1",
-    "babel-cli": "^6.5.1",
-    "babel-eslint": "^5.0.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.5.2",
-    "bcrypt": "^1.0.2",
-    "bcrypt-nodejs": "0.0.3",
     "better-npm-run": "0.0.5",
     "body-parser": "^1.15.0",
     "chai": "^3.5.0",
@@ -69,29 +62,17 @@
     "eslint-config-airbnb": "^5.0.1",
     "eslint-plugin-flow-vars": "^0.1.3",
     "express": "^4.13.4",
-    "fsm-engine": "0.0.17",
     "helmet": "^1.1.0",
-    "jwt-simple": "^0.4.1",
     "mocha": "^2.4.5",
     "morgan": "^1.6.1",
     "nodemon": "^1.8.1",
-    "passport": "^0.3.2",
-    "passport-jwt": "^2.0.0",
+    "request": "latest",
     "request-promise": "^4.2.1",
-    "sequelize": "^3.19.2",
-    "sqlite3": "^3.1.8",
     "supertest": "^1.2.0",
-    "tedious": "^2.0.0",
     "winston": "^2.1.1"
   },
   "devDependencies": {
     "apidoc": "^0.15.1",
-    "babel-cli": "^6.5.1",
-    "babel-eslint": "^5.0.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.5.2",
-    "better-npm-run": "0.0.5",
     "chai": "^3.5.0",
     "ejs": "^2.5.6",
     "eslint": "^1.10.3",
@@ -99,7 +80,6 @@
     "eslint-plugin-flow-vars": "^0.1.3",
     "mocha": "^2.4.5",
     "nodemon": "^1.8.1",
-    "sqlite3": "^3.1.8",
     "supertest": "^1.2.0"
   }
 }
